# lab1final

./: CMakeLists.txt  test_main.cpp  test_tbitfield.cpp  test_tset.cpp
Test/: tbitfield.cpp  tbitfield.h  tset.cpp  tset.h
